--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,13 @@
+body {
+  font-size: 36px;
+}
+.container {
+  width: 1000px;
+  margin: 0 auto;
+}
 h1 {
   color: red;
+}
+.btn {
+  margin-bottom: 50px;
 }
